Added tests and some endpoints